<resources>
    <string name="app_name">Chord Progressions</string>
    <string name="button_root">I</string>
    <string name="button_2nd">ii</string>
    <string name="button_3rd">iii</string>
    <string name="button_4th">IV</string>
    <string name="button_5th">V</string>
    <string name="button_6th">vi</string>
    <string name="button_7th">viiº</string>
    <string name="button_play">Whiskey Before Breakfast</string>
    <string name="text_key">Key:</string>
    <string name="text_scale">Scale:</string>
    <string name="key_spinner_prompt">Select Key</string>
    <string name="track_valume_label">Track Volume</string>
    <string name="sample_valume_label">Sample Volume</string>
    <string name="browse_button_text">Browse...</string>
    <string name="track_name_view_default">[No track loaded]</string>
    <string-array name="keys_array">
        <item>G♭</item>
        <item>D♭</item>
        <item>A♭</item>
        <item>E♭</item>
        <item>B♭</item>
        <item>F</item>
        <item>C</item>
        <item>G</item>
        <item>D</item>
        <item>A</item>
        <item>E</item>
        <item>B</item>
    </string-array>
    <string-array name="scales_array">
        <item>major</item>
        <item>minor</item>
        <item>mixolydian</item>
    </string-array>
</resources>
