<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/button_root"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="136dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/s1button"
            app:layout_constraintHorizontal_bias="0.498" android:onClick="playSample"
            android:soundEffectsEnabled="false"/>
    <Button
            android:text="@string/button_2nd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/s2button" app:layout_constraintTop_toBottomOf="@+id/s1button"
            android:layout_marginTop="16dp" android:onClick="playSample" android:soundEffectsEnabled="false"
            app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/button_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button3" android:onClick="playWhiskey"/>
    <Button
            android:text="@string/button_3rd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/s3button" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/s2button" android:onClick="playSample"
            android:soundEffectsEnabled="false"/>
    <Button
            android:text="@string/button_4th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/s4button" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/s3button" android:onClick="playSample"/>
    <Button
            android:text="@string/button_5th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/s5button" app:layout_constraintTop_toBottomOf="@+id/s4button"
            android:layout_marginTop="16dp" android:onClick="playSample"/>
    <Button
            android:text="@string/button_6th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/s6button" app:layout_constraintTop_toBottomOf="@+id/s5button"
            android:layout_marginTop="16dp" android:onClick="playSample"/>
    <Button
            android:text="@string/button_7th"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/s7button" app:layout_constraintTop_toBottomOf="@+id/s6button"
            android:layout_marginTop="16dp" android:onClick="playSample"/>
    <Spinner
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/spinner"
            app:layout_constraintBottom_toBottomOf="parent" android:entries="@array/keys_array"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/s7button"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.073"/>
</android.support.constraint.ConstraintLayout>